# ffi_demo

./: README.md
demo_lib1/: .metadata  README.md  ffigen.yaml  pubspec.yaml
demo_lib1/example/: README.md  pubspec.yaml
demo_lib1/example/android/app/: build.gradle.kts
demo_lib1/example/ios/Runner.xcodeproj/: project.pbxproj
demo_lib1/example/linux/: CMakeLists.txt
demo_lib1/example/linux/runner/: my_application.cc
demo_lib1/example/macos/Runner.xcodeproj/: project.pbxproj
demo_lib1/example/windows/runner/: Runner.rc
demo_lib1/lib/: demo_lib.dart
demo_lib1/src/: demo_lib.c
demo_lib1/test/: demo_lib_test.dart
demo_lib2/: .metadata  README.md  ffigen.yaml  pubspec.yaml
demo_lib2/android/: build.gradle  settings.gradle
demo_lib2/android/src/main/: AndroidManifest.xml
demo_lib2/example/: README.md  pubspec.yaml
demo_lib2/example/android/app/: build.gradle.kts
demo_lib2/example/ios/Runner/: Info.plist
demo_lib2/example/ios/Runner.xcodeproj/: project.pbxproj
demo_lib2/example/lib/: main.dart
demo_lib2/example/linux/flutter/: generated_plugins.cmake
demo_lib2/example/macos/Runner.xcodeproj/: project.pbxproj
demo_lib2/example/windows/: CMakeLists.txt
demo_lib2/example/windows/flutter/: generated_plugins.cmake
demo_lib2/ios/: demo_lib.podspec
demo_lib2/ios/Classes/: demo_lib.c
demo_lib2/lib/: demo_lib.dart  demo_lib_bindings_generated.dart
demo_lib2/linux/: CMakeLists.txt
demo_lib2/macos/: demo_lib.podspec
demo_lib2/src/: CMakeLists.txt  demo_lib.c
demo_lib2/windows/: CMakeLists.txt
(+7 files in other folders)
